@@ -1,3 +1,13 @@
+2009-10-09  Andrew Pinski  <andrew_pinski@playstation.sony.com>
+	    Ian Lance Taylor  <iant@google.com>
+
+	* configure.ac: Check for readv function also.
+	* fileread.cc (readv): Define if not HAVE_READV.
+	* fileread.h (File_read:: max_readv_entries): Set to 1 if readv
+	does not exist.
+	* config.in: Regenerate.
+	* configure: Regenerate.
+
 2009-10-09  Doug Kwan  <dougkwan@google.com>
 
 	* layout.cc (Layout::make_output_section): Call target hook to make
